@@ -12,7 +12,7 @@ public class App {
 
         List<String> strings2 = new ArrayList<String>(Arrays.asList(new String[] {"1", "2", "3", "4", "5"}));
         // Q3 List<Integer> ints = strings2.stream().map(i -> Integer.parseInt(i)).collect(Collectors.toList());
-        List<Integer> ints = strings2.stream().map(Integer::parseInt).collect(Collectors.toList());
+        List<Integer> ints = strings2.stream().map(Integer::parseInt).toList();
         System.out.println(ints);
     }
 }
